# SemanticSegmentation-Libtorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SemanticSegmentation-Libtorch.sln  build.sh  convert.py
.github/workflows/: CI.yml  push.yml
Poco-1.9.4/lib/x64/: PocoFoundation.lib  PocoFoundationd.lib  PocoJSON.lib  PocoJSONd.lib
Scripts/: install.bat
Scripts/ps/: _action.ps1  _download.ps1  _info.ps1  _operations.ps1  install.ps1
SemanticSegmentation-Libtorch/: SemanticSegmentation-Libtorch.cpp  SemanticSegmentation-Libtorch.vcxproj  SemanticSegmentation-Libtorch.vcxproj.filters  loss.h  training.h
SemanticSegmentation-Libtorch/DataSet/: COCODataSet.cpp  COCODataSet.h  COCODetection.cpp  COCODetection.h  SegmentationMask.cpp  SegmentationMask.h
SemanticSegmentation-Libtorch/cocoapi/: coco.cpp  coco.h  cocoNote.cpp  cocoNote.h  mask.cpp  mask.h  mask_api.cpp
SemanticSegmentation-Libtorch/models/: IntermediateLayerGetter.cpp  IntermediateLayerGetter.h  resnet.cpp  resnet.h
SemanticSegmentation-Libtorch/models/segmentation/: DeeplabV3.cpp  DeeplabV3.h  SegmentationModel.cpp  SegmentationModel.h
SemanticSegmentation-Libtorch/utills/: metric_logger.cpp  metric_logger.h  transforms.cpp
include/: training.h
include/DataSet/: COCODetection.h
include/cocoapi/: cocoNote.h  mask.h  mask_api.h
include/models/: resnet.h
include/models/segmentation/: DeeplabV3.h  SegmentationModel.h
include/utills/: transforms.h
src/: SemanticSegmentation-Libtorch.vcxproj  SemanticSegmentation-Libtorch.vcxproj.filters  main.cpp
src/DataSet/: COCODataSet.cpp  COCODetection.cpp
src/cocoapi/: cocoNote.cpp  mask.cpp  mask_api.cpp
src/models/: IntermediateLayerGetter.cpp  resnet.cpp
src/models/segmentation/: DeeplabV3.cpp  SegmentationModel.cpp
src/utills/: metric_logger.cpp  transforms.cpp
